# server/Application/Models/Dtos/PatientDto/CancelAppointmentDto.cs
@@ -1,0 +1,7 @@
+﻿namespace Application.Models.Dtos.PatientDto;
+
+public class CancelAppointmentDto
+{
+    public string Id { get; set; } = null!;
+    public string Status { get; set; } = null!;
+}
